--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 404 - Page not found
+title: 404 - Página não encontrada
 permalink: /404
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Desculpe, não conseguimos encontrar a página que você está procurando. Você pode tentar novamente [voltando à página inicial]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/404.jpg" alt="Página não encontrada" style="width: 400px;"/>]({{ site.baseurl }}/)
